fix: fix style in content__profile, add text-overflow: ellipsis,white-space: nowrap;

--- a/blocks/content/__button-add/content__button-add.css
+++ b/blocks/content/__button-add/content__button-add.css
@@ -14,21 +14,10 @@
   cursor: pointer;
 }
 
-@media (max-width: 1060px) {
+@media (max-width: 1200px) {
   .content__button-add {
     margin-top: 33px;
-  }
-}
-@media (max-width: 870px) {
-  .content__button-add {
-    align-self: start;
-  }
-}
-
-@media (max-width: 670px) {
-  .content__button-add {
     background: url(../../../images/logo/Add\ Button.svg);
     width: 282px;
-    align-self: center;
   }
 }
