--- a/blocks/content/__edit/content__edit.css
+++ b/blocks/content/__edit/content__edit.css
@@ -2,4 +2,22 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 500px;
+}
+
+@media (max-width: 1228px) {
+  .content__edit {
+    width: 400px;
+  }
+}
+@media (max-width: 885px) {
+  .content__edit {
+    width: 300px;
+  }
+}
+
+@media (max-width: 400px) {
+  .content__edit {
+    width: 280px;
+  }
 }
