--- a/blocks/content/__title/content__title.css
+++ b/blocks/content/__title/content__title.css
@@ -3,6 +3,10 @@
   font-size: 42px;
   font-weight: 500;
   line-height: 1.14em;
+  /*Реализовация переполнение блока с появляющимся многоточием в конце*/
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media (max-width: 885px) {
